Fixed SweetAlert text alignment

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -264,6 +264,7 @@ body::-webkit-scrollbar {
 .swal-title {
     font-weight: 400;
     color: $gray-900;
+    text-align: center;
 }
 
 .swal-button {
